--- a/html/index.html
+++ b/html/index.html
@@ -248,6 +248,43 @@
           </div>
         </div>
       </section>
+
+      <section class="why">
+        <div class="y-img">
+          <img src="../assets/curry.jpg" alt="" />
+        </div>
+        <div class="y-txt">
+          <h2>Why People Choose Us?</h2>
+          <p>
+            Quality of Service, Food, Ambiance and Value of Money are the
+            primary elements for choosing a restaurant. Our team is always
+            looking forward to provide you exceptional services and win your
+            hearts out.
+          </p>
+          <p>
+            Is a place for peace lovers where you can indulge yourself into
+            enchanting bliss of colossal contours of Pines Golf Course and when
+            you are done with golfing,and chill and relax at Gold Fitness Club &
+            Spa.
+          </p>
+        </div>
+      </section>
+      <section class="Chef">
+        <div class="chef-txt">
+          <div class="line-txt">
+            <span class="line"></span>
+            <h3>Team Member</h3>
+            <span class="line"></span>
+          </div>
+          <h1>Our Master Chefs</h1>
+        </div>
+        <div class="chef-member">
+          <div class="chef-box"></div>
+          <div class="chef-box"></div>
+          <div class="chef-box"></div>
+          <div class="chef-box"></div>
+        </div>
+      </section>
     </section>
     <footer></footer>
   </body>
