design layout and resposive in popu-food

--- a/html/index.html
+++ b/html/index.html
@@ -193,7 +193,7 @@
         </article>
       </section>
 
-      <section class="popu-food">
+      <section class="popu-food" data-aos="zoom-in-up">
         <div class="popu-txt">
           <div class="line-txt">
             <span class="line"></span>
@@ -204,30 +204,34 @@
           <h1>Most Popular Food</h1>
         </div>
         <div class="food-box">
-          <span class="img-box">
-            <img src="../assets/amok2.jpg" alt="" />
-            <p>Amok</p>
-          </span>
-          <span class="img-box"
-            ><img src="../assets/curry.jpg" alt="" />
-            <p>Curry</p>
-          </span>
-          <span class="img-box"
-            ><img src="../assets/sushi.jpg" alt="" />
-            <p>Sushi</p>
-          </span>
-          <span class="img-box"
-            ><img src="../assets/Phở.jpg" alt="" />
-            <p>Phở</p>
-          </span>
-          <span class="img-box"
-            ><img src="../assets/kuytev.jpg" alt="" />
-            <p>Key Tiev</p>
-          </span>
-          <span class="img-box"
-            ><img src="../assets/baycha.jpg" alt="" />
-            <p>HealthyFood</p>
-          </span>
+          <div class="f-box-1">
+            <span class="img-box">
+              <img src="../assets/amok2.jpg" alt="" />
+              <p>Amok</p>
+            </span>
+            <span class="img-box"
+              ><img src="../assets/curry.jpg" alt="" />
+              <p>Curry</p>
+            </span>
+            <span class="img-box"
+              ><img src="../assets/sushi.jpg" alt="" />
+              <p>Sushi</p>
+            </span>
+          </div>
+          <div class="f-box-1">
+            <span class="img-box"
+              ><img src="../assets/Phở.jpg" alt="" />
+              <p>Phở</p>
+            </span>
+            <span class="img-box"
+              ><img src="../assets/kuytev.jpg" alt="" />
+              <p>Key Tiev</p>
+            </span>
+            <span class="img-box"
+              ><img src="../assets/baycha.jpg" alt="" />
+              <p>HealthyFood</p>
+            </span>
+          </div>
         </div>
         <div class="des-popu-food">
           <div class="des-popu-txt">
@@ -249,7 +253,7 @@
         </div>
       </section>
 
-      <section class="why">
+      <section class="why" data-aos="zoom-in-right">
         <div class="y-img">
           <img src="../assets/curry.jpg" alt="" />
         </div>
@@ -269,7 +273,11 @@
           </p>
         </div>
       </section>
-      <section class="Chef">
+      <section
+        class="Chef"
+        data-aos="fade-up"
+        data-aos-anchor-placement="bottom-bottom"
+      >
         <div class="chef-txt">
           <div class="line-txt">
             <span class="line"></span>
@@ -279,10 +287,22 @@
           <h1>Our Master Chefs</h1>
         </div>
         <div class="chef-member">
-          <div class="chef-box"></div>
-          <div class="chef-box"></div>
-          <div class="chef-box"></div>
-          <div class="chef-box"></div>
+          <div class="chef-box">
+            <img src="../assets/chef-img1-removebg-preview.png" alt="" />
+            <h2>Emma Lee</h2>
+          </div>
+          <div class="chef-box">
+            <img src="../assets/chef-img2-removebg-preview.png" alt="" />
+            <h2>John Baker</h2>
+          </div>
+          <div class="chef-box">
+            <img src="../assets/chef2-removebg-preview.png" alt="" />
+            <h2>Tom Hill</h2>
+          </div>
+          <div class="chef-box">
+            <img src="../assets/chef-img-3-removebg-preview.png" alt="" />
+            <h2>Diego Santiago</h2>
+          </div>
         </div>
       </section>
     </section>
