--- a/html/menu.html
+++ b/html/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/Restaurant/style/index.css" />
+    <link rel="stylesheet" href="/Restaurant/style/menu.css" />
   </head>
   <body>
     <header>
@@ -21,67 +22,85 @@
         </div>
       </nav>
     </header>
-    <footer class="footer">
-      <div class="footer-content">
-        <!-- About Section -->
-        <div class="footer-section">
-          <h3>About Us</h3>
-          <p>
-            We are passionate about delivering the best dining experience to our
-            customers. Our restaurant combines traditional flavors with modern
-            cuisine.
-          </p>
-          <div class="contact-info">
-            <p><i class="fas fa-phone"></i> +855 12345678</p>
-            <p><i class="fas fa-envelope"></i> info@khmer_restaurant.com</p>
+    <section class="food-menu">
+      <main class="info">
+        <div class="f-txt">
+          <h1>Food Menu</h1>
+        </div>
+      </main>
+      <article class="txt-popu-food">
+        <div class="popu-txt">
+          <div class="line-txt">
+            <span class="line"></span>
+            <h3>Food Menu</h3>
+            <span class="line"></span>
+          </div>
+          <h1>Most Popular Foods</h1>
+        </div>
+      </article>
+      <section class="list-food"></section>
+      <footer class="footer">
+        <div class="footer-content">
+          <!-- About Section -->
+          <div class="footer-section">
+            <h3>About Us</h3>
             <p>
-              <i class="fas fa-map-marker-alt"></i> #271 Street,Toul Kork, Phnom
-              Penh
+              We are passionate about delivering the best dining experience to
+              our customers. Our restaurant combines traditional flavors with
+              modern cuisine.
             </p>
+            <div class="contact-info">
+              <p><i class="fas fa-phone"></i> +855 12345678</p>
+              <p><i class="fas fa-envelope"></i> info@khmer_restaurant.com</p>
+              <p>
+                <i class="fas fa-map-marker-alt"></i> #271 Street,Toul Kork,
+                Phnom Penh
+              </p>
+            </div>
+          </div>
+
+          <!-- Quick Links Section -->
+          <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul class="quick-links">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="#menu">Food-Menu</a></li>
+              <li><a href="#about">About Us</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+
+          <!-- Opening Hours Section -->
+          <div class="footer-section">
+            <h3>Opening Hours</h3>
+            <ul class="hours">
+              <li>Monday - Friday: 9AM - 10PM</li>
+              <li>Saturday: 10AM - 11PM</li>
+              <li>Sunday: 10AM - 9PM</li>
+            </ul>
+          </div>
+
+          <!-- Newsletter Section -->
+          <div class="footer-section">
+            <h3>Newsletter</h3>
+            <p>Subscribe to our newsletter for updates and special offers.</p>
+            <form class="newsletter-form">
+              <input type="email" placeholder="Enter your email" />
+              <button type="submit">Subscribe</button>
+            </form>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-telegram"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
           </div>
         </div>
 
-        <!-- Quick Links Section -->
-        <div class="footer-section">
-          <h3>Quick Links</h3>
-          <ul class="quick-links">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="#menu">Food-Menu</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+        <!-- Bottom Bar -->
+        <div class="footer-bottom">
+          <p>&copy; 2025 Your Restaurant. All rights reserved.</p>
         </div>
-
-        <!-- Opening Hours Section -->
-        <div class="footer-section">
-          <h3>Opening Hours</h3>
-          <ul class="hours">
-            <li>Monday - Friday: 9AM - 10PM</li>
-            <li>Saturday: 10AM - 11PM</li>
-            <li>Sunday: 10AM - 9PM</li>
-          </ul>
-        </div>
-
-        <!-- Newsletter Section -->
-        <div class="footer-section">
-          <h3>Newsletter</h3>
-          <p>Subscribe to our newsletter for updates and special offers.</p>
-          <form class="newsletter-form">
-            <input type="email" placeholder="Enter your email" />
-            <button type="submit">Subscribe</button>
-          </form>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-telegram"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Bottom Bar -->
-      <div class="footer-bottom">
-        <p>&copy; 2025 Your Restaurant. All rights reserved.</p>
-      </div>
-    </footer>
+      </footer>
+    </section>
   </body>
 </html>
